# Oasis

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  gate.md  task.md
.github/workflows/: ci.yml  secret-scan.yml
assets/: .gitkeep  README.md
docs/: DEV_SETUP.md  LFS_POLICY.md  ROADMAP.md
docs/adr/: 0001-engine.md
docs/architecture/: 0002-m1-data-contracts.md  0003-world-document.md  0004-refinement-interaction.md  ARCHITECTURE_OVERVIEW.md
docs/costs/: .gitkeep  COST_MODEL.md
docs/demo/: M4_PLAYABLE_DEMO.md
docs/issues/: EPIC_AND_SUBISSUE_GUIDE.md
docs/process/: DEFINITION_OF_DONE.md
infrastructure/: .gitkeep  README.md
scripts/: build_import_fixture.py  derive_phase1_metrics.py  validate_m1_mock_demo.py  validate_m4_demo.py  validate_scaffold.py  validate_secret_scanning.py  validate_unity_creator_ui.py  validate_unity_import_pipeline.py  validate_unity_ui.py
src/: README.md
tests/: test_capture_contract.py  test_creator_history.py  test_exploration_contract.py  test_generation_service.py  test_golden_prompts.py  test_m1_mock_demo.py  test_m4_demo.py  test_offline_import_fixture.py  test_performance_contract.py  test_phase1_metrics.py  test_refine_service.py  test_refinement_contract.py  test_secret_policy.py  test_spec_service.py  test_unity_creator_ui_contract.py  test_unity_import_contract.py  test_unity_ui_contract.py  test_voice_contract.py  test_voice_service.py  test_world_persistence_contract.py
(+49 files in other folders)
