[project]
name = "oasis-ai"
version = "0.1.0"
description = "Oasis AI backend service for text-to-structured 3D specs."
requires-python = ">=3.11,<3.12"
dependencies = [
    "anthropic>=0.70.0,<1.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src/ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/ai"]
